samples/_failures_safe/1761365001_bef6f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ac24126.c: In function ‘main’:
./samples/SAFE/__tmp_4ac24126.c:160: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4ac24126.c:159:17: error: expected declaration or statement at end of input
  159 |                 if
      |                 ^~
./samples/SAFE/__tmp_4ac24126.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ac24126.c:159:17: error: expected declaration or statement at end of input
